examples/datalog/10_edge_cases/38_empty_after_filter.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_empty_filter
Knowledge graph 'test_empty_filter' created.
Switched to knowledge graph: test_empty_filter
> .kg use test_empty_filter
Switched to knowledge graph: test_empty_filter
> +data[(1, 10), (2, 20), (3, 30)].
Inserted 3 fact(s) into 'data'.
> empty_result(Id, Val) :- data(Id, Val), Val > 100.
No results.
(session: 1 rule(s))
> ?- empty_result(Id, Val).
No results.
> +empty_count(<COUNT:Id>) :- empty_result(Id, _).
Script error: Parse error: Invalid term: '<COUNT:Id>'
