examples/datalog/10_edge_cases/38_empty_after_filter.dl
% Test: Empty result after filter
% Expected: Empty result handled gracefully
% Category: 10_edge_cases
% Priority: P1 - Edge cases

.kg create test_empty_filter
.kg use test_empty_filter

+data[(1, 10), (2, 20), (3, 30)].

% Filter that matches nothing
empty_result(Id, Val) :- data(Id, Val), Val > 100.

?- empty_result(Id, Val).

% Aggregation on empty result
+empty_count(<COUNT:Id>) :- empty_result(Id, _).

?- empty_count(C).

.kg use default
.kg drop test_empty_filter
